--- a/2-homepage.html
+++ b/2-homepage.html
@@ -5,32 +5,49 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>holberton-smiling</title>
-
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Coiny&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Coiny&display=swap" rel="stylesheet">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
   <!-- Custom and Font Styles -->
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="font-style.css" />
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 
-  <!-- jQuery, Popper.js, and Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
+  <style>
+    .spinner-container, .spinner2-container {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      display: none;
+      /* Hidden by default */
+      z-index: 1050;
+      /* Ensure spinner is above other content */
+    }
 
-  <!-- Custom Scripts -->
-  <script src="scripts.js"></script>
+    .spinner-border, .spinner2-container .spinner2-border {
+      width: 3rem;
+      height: 3rem;
+      border-width: .4em;
+      border-radius: 50%;
+      border-color: rgb(244, 244, 244);
+    }
+
+    .video-card {
+      margin-bottom: 20px;
+    }
+
+    .video-card img {
+      width: 100%;
+      height: auto;
+    }
+
+  </style>
 </head>
 
 <body class="body">
@@ -104,33 +121,216 @@
       </section>
     </div>
   </header>
-
-  <section class="quotes-section mt-5 text-white">
-    <div id="quotes-loader" class="text-center" style="display: none;">
-      <!-- Bootstrap spinner -->
-      <div class="spinner-border" role="status">
-        <span class="sr-only">Loading...</span>
+  <main class="main">
+    <section class="quotes section d-flex align-items-center">
+      <div class="container position-relative">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner" id="quote-container">
+            <!-- Dynamic quotes will be inserted here -->
+          </div>
+          <!-- Spinner -->
+          <div class="spinner-container">
+            <div class="spinner-border text-light" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
+          <a class="carousel-control-prev arrow-left" href="#carouselExampleControls" role="button" data-slide="prev">
+            <img src="images/arrow_white_left.png" alt="Quote Previous" aria-hidden="true" />
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next arrow-right" href="#carouselExampleControls" role="button" data-slide="next">
+            <img src="images/arrow_white_right.png" alt="Quote Next" aria-hidden="true" />
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
       </div>
-    </div>
-    <div id="quotes-carousel" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner" id="quotes-content">
-        <!-- Quotes will be dynamically loaded here -->
+    </section>
+
+    <section class="popular-tutorials section">
+      <div class="container position-relative"> <!-- Add position-relative here -->
+        <h2 class="text-center font-weight-bold">Most Popular Tutorials</h2>
+        <div id="tutorial-carousel" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner" id="tutorial-container">
+            <!-- Dynamic tutorial cards will be inserted here -->
+          </div>
+          <!-- Spinner -->
+          <div id="tutorial-spinner" class="spinner2-container">
+            <div class="spinner-border2" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#tutorial-carousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#tutorial-carousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
       </div>
-      <a class="carousel-control-prev" href="#quotes-carousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#quotes-carousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </section>
+    </section>
+
+  </main>
+
+  <!-- JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="scripts.js"></script>
 
 
 
 
-  
+  <script>
+    async function loadQuotes() {
+      const spinner = document.querySelector('.spinner-container');
+      spinner.style.display = 'flex'; // Show spinner
+
+      try {
+        const response = await fetch('https://smileschool-api.hbtn.info/quotes');
+        const quotes = await response.json();
+        displayQuotes(quotes);
+      } catch (error) {
+        console.error('Error fetching quotes:', error);
+      } finally {
+        spinner.style.display = 'none'; // Hide spinner
+      }
+    }
+
+    function displayQuotes(quotes) {
+      const quoteContainer = document.getElementById('quote-container');
+      quoteContainer.innerHTML = ''; // Clear any existing content
+
+      quotes.forEach((quote, index) => {
+        // Create a new carousel-item div
+        const carouselItem = document.createElement('div');
+        carouselItem.className = `carousel-item ${index === 0 ? 'active' : ''}`;
+
+        // Create the row div
+        const rowDiv = document.createElement('div');
+        rowDiv.className = 'row mx-auto align-items-center';
+
+        // Create the profile column
+        const profileCol = document.createElement('div');
+        profileCol.className = 'col-12 col-sm-5 text-center text-sm-left';
+
+        // Create profile image
+        const profileImage = document.createElement('img');
+        profileImage.className = 'rounded-circle';
+        profileImage.src = quote.pic_url;
+        profileImage.alt = `${quote.name} profile image`;
+
+        // Create profile text
+        const profileText = document.createElement('div');
+        profileText.className = 'col-12 col-sm-7 text-center text-sm-left';
+        profileText.innerHTML = `
+            <p class="text-uppercase font-weight-bold text-white">${quote.title}</p>
+            <p class="font-weight-bold text-white">${quote.name}</p>
+            <p class="font-italic text-white">${quote.text}</p>
+          `;
+
+        // Append elements
+        profileCol.appendChild(profileImage);
+        rowDiv.appendChild(profileCol);
+        rowDiv.appendChild(profileText);
+        carouselItem.appendChild(rowDiv);
+        quoteContainer.appendChild(carouselItem);
+      });
+    }
+
+    async function loadTutorials() {
+      const tutorialContainer = document.getElementById('tutorial-container');
+      tutorialContainer.innerHTML = ''; // Clear any existing content
+
+      const spinner = document.getElementById('tutorial-spinner');
+      spinner.style.display = 'flex'; // Show spinner
+
+      const spinner2 = document.querySelector('.spinner2-container');
+      spinner2.style.display = 'flex'; // Show spinner2-container
+
+      try {
+        const response = await fetch('https://smileschool-api.hbtn.info/popular-tutorials');
+        const tutorials = await response.json();
+        displayTutorials(tutorials);
+      } catch (error) {
+        console.error('Error fetching tutorials:', error);
+      } finally {
+        spinner.style.display = 'none'; // Hide spinner
+        spinner2.style.display = 'none'; // Hide spinner2-container
+      }
+    }
+
+    function displayTutorials(tutorials) {
+      const tutorialContainer = document.getElementById('tutorial-container');
+      tutorialContainer.innerHTML = ''; // Clear any existing content
+
+      tutorials.forEach((tutorial, index) => {
+        // Create a new carousel-item div
+        const carouselItem = document.createElement('div');
+        carouselItem.className = `carousel-item ${index === 0 ? 'active' : ''}`;
+
+        // Create the card div
+        const cardDiv = document.createElement('div');
+        cardDiv.className = 'card video-card';
+
+        // Create video thumbnail
+        const videoImg = document.createElement('img');
+        videoImg.className = 'card-img-top';
+        videoImg.src = tutorial.thumb_url;
+        videoImg.alt = tutorial.title;
+
+        // Create card body
+        const cardBodyDiv = document.createElement('div');
+        cardBodyDiv.className = 'card-body';
+
+        // Create card title
+        const cardTitle = document.createElement('h5');
+        cardTitle.className = 'card-title';
+        cardTitle.textContent = tutorial.title;
+
+        // Create card text
+        const cardText = document.createElement('p');
+        cardText.className = 'card-text';
+        cardText.textContent = tutorial.subtitle;
+
+        // Append elements
+        cardBodyDiv.appendChild(cardTitle);
+        cardBodyDiv.appendChild(cardText);
+        cardDiv.appendChild(videoImg);
+        cardDiv.appendChild(cardBodyDiv);
+        carouselItem.appendChild(cardDiv);
+        tutorialContainer.appendChild(carouselItem);
+      });
+
+      // Ensure carousel has the correct active index
+      $('#tutorial-carousel').carousel({
+        interval: 5000
+      });
+    }
+
+    $(document).ready(function () {
+      $('#carouselExampleControls').on('slide.bs.carousel', function () {
+        const spinner = document.querySelector('.spinner-container');
+        spinner.style.display = 'flex'; // Show spinner when sliding
+      });
+
+      $('#carouselExampleControls').on('slid.bs.carousel', function () {
+        const spinner = document.querySelector('.spinner-container');
+        spinner.style.display = 'none'; // Hide spinner after sliding
+      });
+
+      loadQuotes(); // Load quotes on page load
+      loadTutorials(); // Load tutorials on page load
+    });
+  </script>
+
+
 </body>
 
 </html>
